# winmailtest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
cmake/: Toolchain-i686-w64-mingw32-static.cmake
data/: data.qrc  icons.qrc  windres.rc
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  iconloader.cpp  iconloader.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/qt5/: outlook.h
